--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ Thumbs.db
 /public/css/frontpage_styles2.css
 /app/views/lowerhouse/show2.blade.php
 /app/views/upperhouse/show2.blade.php
+/app/views/index2.blade.php
+/app/views/layouts/index2.blade.php
 /public/js/jquery.slidermenu.js
 /public/images/oldphotos
 /node_modules
