--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ Thumbs.db
 /app/views/index2.blade.php
 /app/views/layouts/index2.blade.php
 /public/js/jquery.slidermenu.js
-/public/images/oldphotos
+/public/images/header_idea.psd
 /node_modules
